collaborateurs et prestations almost finished

--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -72,15 +72,15 @@
         <br>
 
 
-        <p-accordion [multiple]="true" *ngFor="let item of all_sheet_name; let i = index">
-            <p-accordionTab header="">
+        <p-accordion>
+            <p-accordionTab *ngFor="let item of all_sheet_name; let i = index">
                 <p-header class="" style="">
 
                     <div class="ui-toolbar-group-left" style="position:absolute;top:5%;left: 40px"><a>{{all_sheet_name[i]}}</a>
                     </div>
                     <div class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
                         <button pButton type="button" label="Importer la table" icon="pi pi-upload"
-                                class="ui-button-success" (click)="saveRefTable(alltable[i],false)"></button>
+                                class="ui-button-success" (click)="saveRefTable(alltable[i],false);"></button>
                     </div>
                 </p-header>
 
