fix design page daccueil

--- a/src/app/component/charts/charts.component.html
+++ b/src/app/component/charts/charts.component.html
@@ -18,9 +18,9 @@
     <div class="ui-g-6 ui-lg-6 charts2">
         <div class="card">
             <h5 class="centerText">Evolution du nombre de sous-traitants par département sur 6 mois</h5>
-            <div class="chart">
+            <div class="chart" style="height:40vh">
 
-                    <p-table *ngIf="dataTable.length > 0"  [columns]="dataTable" [value]="dataTable">
+                    <p-table *ngIf="dataTable.length > 0" [columns]="dataTable" [value]="dataTable">
                     <ng-template pTemplate="header" let-columns>
                         <tr>
                             <th>
@@ -58,7 +58,7 @@
                     </ng-template>
                 </p-table>
 
-                <h1 *ngIf="dataTable.length == 0"  style="text-align: center;color: #f44336">Aucune données dans la base</h1>
+                <h1 *ngIf="dataTable.length == 0"  style="text-align: center;color: #f44336 ; ">Aucune données dans la base</h1>
 
             </div>
         </div>
@@ -67,8 +67,8 @@
     <div class="ui-g-6 ui-lg-6 charts2">
         <div class="card">
             <h5 class="centerText">Evolution du nombre de sous-traitants par département sur 6 mois</h5>
-            <div class="chart">
-                <p-chart  *ngIf="dataTable.length > 0"  type="line" [data]="lineData"></p-chart>
+            <div class="chart" style="height:40vh">
+                <p-chart  *ngIf="dataTable.length > 0" type="line" [data]="lineData"></p-chart>
                 <h1 *ngIf="dataTable.length == 0"  style="text-align: center;color: #f44336">Aucune données dans la base</h1>
 
             </div>
