--- a/src/app/component/app-dashboard/app-dashboard.component.html
+++ b/src/app/component/app-dashboard/app-dashboard.component.html
@@ -3,15 +3,15 @@
         <div class="card card-w-title news">
             <div class="">
                 <div class="items">
-                    <app-news></app-news>
+                    <app-news ></app-news>
                 </div>
             </div>
         </div>
     </div>
     <div class="ui-g-6 ui-md-4">
-        <div class="card card-w-title menu">
+        <div class="card card-w-title menu" >
 
-            <div class="ui-g-12" style="padding-bottom: 0">
+            <div class="ui-g-12" style="padding-bottom: 0;" >
                 <div routerLink="/collaborateurs" class="ui-g-4 case">
                     <div style="position:relative">
                         <div class="shadow-box ui-shadow-1">
