--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -46,7 +46,7 @@
             </ng-template>
         </p-table>
     </p-tabPanel>
-    <p-tabPanel header="Réferenciels">
+    <p-tabPanel header="Référentiels">
         <p-toolbar>
             <!--    <div class="ui-toolbar-group-right">
 
