--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -61,7 +61,7 @@
 
                 <p-fileUpload #fubauto #fileImportInput mode="basic" accept=".xlsx" customUpload="true"
                               (uploadHandler)="Upload($event)" auto="true"
-                              chooseLabel="Importer les données de réferenciel">
+                              chooseLabel="Importer les données de referentiel">
 
                 </p-fileUpload>
 
