--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -74,7 +74,7 @@
                 </div>
                 <button pButton  type="button" label="Effacer toutes les tables"
                         icon="pi pi-upload"
-                        class="ui-button-danger" (click)="cleanAllTable(alltable)">
+                        class="ui-button-danger" (click)="cleanAllTable()">
                 </button>
                 <div class="ui-toolbar-group-right" style="margin: 2px" [style.visibility]="clearRef ? 'visible' : 'hidden'">
                     <p-progressSpinner [style]="{width: '30px', height: '30px'}" strokeWidth="8"
